mudança nos avisos

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <textarea id="result" disabled></textarea>
                     <div id="crypt-extra">
                         <button id="copy-button">Copiar</button>
-                        <p id="error-message"></p>
+                        <div id="error-message"></div>
                     </div>
                 </div>
             </div>
